# autosys_template

./: Cargo.toml  Containerfile  Trunk.toml  app.css  index.html  main.js  style copy.css  style.css  tailwind.config.js
nginx/: default.conf
src/: lib.rs  main copy.rs_dummy  main.rs  main.testrs  transform.rs
src/components/: input.rs  machine_editor.rs  mod.rs  owner_editor.rs  preview.rs
